--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,9 @@
     "description": "My first PHP Hexlet project",
     "type": "project",
     "license": "MIT",
+    "scripts": {
+        "phpcs": "phpcs"
+    },
     "bin": [
         "bin/brain-games"
     ],
@@ -11,5 +14,8 @@
     },
     "require": {
         "wp-cli/php-cli-tools": "^0.11.12"
+    },
+    "require-dev": {
+        "squizlabs/php_codesniffer": "^3.6"
     }
 }
