--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,15 @@
         "phpcs": "phpcs"
     },
     "bin": [
-        "bin/brain-games"
+        "bin/brain-games",
+        "bin/brain-even"
     ],
     "autoload": {
-        "files": ["src/Cli.php"]
+        "files": [
+            "src/Cli.php",
+            "src/Game.php",
+            "src/games/even.php"
+        ]
     },
     "require": {
         "wp-cli/php-cli-tools": "^0.11.12"
