Add brain-progression game

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "bin/brain-games",
         "bin/brain-even",
         "bin/brain-calc",
-        "bin/brain-gcd"
+        "bin/brain-gcd",
+        "bin/brain-progression"
     ],
     "autoload": {
         "files": [
@@ -18,7 +19,8 @@
             "src/Game.php",
             "src/games/even.php",
             "src/games/calc.php",
-            "src/games/gcd.php"
+            "src/games/gcd.php",
+            "src/games/progression.php"
         ]
     },
     "require": {
