--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "bin/brain-even",
         "bin/brain-calc",
         "bin/brain-gcd",
-        "bin/brain-progression"
+        "bin/brain-progression",
+        "bin/brain-prime"
     ],
     "autoload": {
         "files": [
@@ -20,7 +21,8 @@
             "src/games/even.php",
             "src/games/calc.php",
             "src/games/gcd.php",
-            "src/games/progression.php"
+            "src/games/progression.php",
+            "src/games/prime.php"
         ]
     },
     "require": {
