--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "seryiza/php-project-lvl1",
+    "name": "hexlet/code",
     "description": "My first PHP Hexlet project",
     "type": "project",
     "license": "MIT",
